--- a/src/App.css
+++ b/src/App.css
@@ -5,17 +5,34 @@
   --mainDark: #232528;
   --mainYellow: #ffa400;
 }
-body{
+body {
   background: var(--mainWhite) !important ;
   color: var(--mainDark) !important;
 }
-.text-title{
+.text-title {
   letter-spacing: 0.3rem;
   text-transform: uppercase;
 }
-.text-blue{
+.text-blue {
   color: var(--mainBlue);
 }
-.text-bright{
+.text-bright {
   color: var(--lightBlue);
+}
+.btn-black {
+  background: transparent;
+  text-transform: capitalize;
+  font-size: 0.8rem !important;
+  color: var(--mainDark);
+  border-radius: 0 !important;
+  border: 0.1rem var(--mainDark) solid !important;
+}
+.btn-black:hover {
+  background: var(--mainDark) !important;
+  color: var(--mainWhite) !important;
+}
+.cart-icon {
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: var(--mainYellow);
 }
